fix comment modal text jumps

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -221,7 +221,7 @@
 }
 
 .comment__modalBox {
-  width: 24px;
+  min-width: 24px;
   div {
     height: 19px;
   }
